syntax = "proto3";
package services;

// python -m grpc_tools.protoc -I. --python_out=../services --pyi_out=../services --grpc_python_out=../services analyzer.proto

//import "google/protobuf/timestamp.proto";

option go_package = "domain_threat_intelligence_api/api/proto/protoServices";

service DomainAnalysisService {
  rpc GetFullScoring(FullDomainScoringParams) returns (DomainScoring);
}

message FullDomainScoringParams {
  optional SemanticData semantics = 1;
  optional ResourceRecordsData resources = 2;
  string name = 3;
}

message DomainScoring {
  string name = 1;

  optional float finalScore = 2;
  optional float semanticScore = 3;
  optional float resourceScore = 4;
  optional float dgaScore = 5;

  optional ScoreFlag tag = 6;
}

enum ScoreFlag {
  DOMAIN_SCORE_BENIGN = 0;
  DOMAIN_SCORE_DUBIOUS = 1;
  DOMAIN_SCORE_SUSPICIOUS = 2;
  DOMAIN_SCORE_MALICIOUS = 3;
}

message SemanticData {
  optional int64 levelsCount = 1;
  optional float levelsMAD = 2;
  optional int64 symbolsCount = 3;
  optional float vowelsRatio = 4;
  optional float consonantsRatio = 5;
  optional float numbersRatio = 6;
  optional float pointsRatio = 7;
  optional float specialRatio = 8;
  optional float uniqueRatio = 9;
  optional int64 maxRepeated = 10;
}

message ResourceRecordsData {
  int64 aRecords = 1;
  int64 mxRecords = 2;
  int64 cnameRecords = 3;
  int64 txtRecords = 4;
  int64 ptrRecords = 5;
  float ptrRatio = 6;
}